got rid of extra stuff

--- a/index.html
+++ b/index.html
@@ -7,20 +7,15 @@
   <h1>Marshall's Website</h1>
 </head>
 <body>
-  <h3>About Me:</h3>
   <img src="marshall.jpeg" height="250"/>
-  <p>Hi, I am Marshall Toro. I am a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me (link below).</p>
+  <h3>About Me:</h3>
+  <p>Hi, I am Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me (link below).</p>
   <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a>
   <h3>Social Media:</h3>
   <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
-  <!-- <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank">YouTube</a> -->
-  <!-- <br> -->
-  <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo3.png" height="35" alt="Twitch"></a>
-  <!-- <br> -->
-  <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo2.png" height="35" alt="Twitter"></a>
-  <!-- <br> -->
+  <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
+  <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
   <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
-  <!-- <br> -->
   <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
 </body>
 </html>
