--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/css/index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marshall's Website</title>
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="aboutMe">
-  <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
+  <img src="/images/marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
   <h3>About Me:</h3>
   <p>Hi, I am Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me (link below).</p>
   <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a>
@@ -22,11 +22,11 @@
 
   <div class="socials">
   <h3>Social Media:</h3>
-  <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
-  <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
-  <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
-  <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
-  <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
+  <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="/images/YTLogo.png" height="35" alt="YouTube"></a>
+  <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="/images/twitchLogo.png" height="35" alt="Twitch"></a>
+  <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="/images/twitterLogo.png" height="35" alt="Twitter"></a>
+  <a href="https://github.com/Maaarsh" target="_blank"><img src="/images/githubLogo.png" height="35" alt="Github"></a>
+  <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="/images/spotifyLogo.png" height="35" alt="Spotify"></a>
   </div>
 
   <script>
