--- a/index.html
+++ b/index.html
@@ -10,23 +10,37 @@
 </head>
 <body>
   <div class="aboutMe">
-  <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
-  <h3>About Me:</h3>
-  <p>Hi, I am Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me (link below).</p>
-  <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a>
+    <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
+    <h3>About Me:</h3>
+    <p>Hi, I am Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with the link or form below.</p>
+    <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a>
   </div>
+  <br>
 
-  <br>
-  <br>
+  <div class="email">
+    <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST">
+      <input type="hidden" name="_template" value="box">
+      <input type="text" name="name" required placeholder="Your name" size="50">
+      <br>
+      <br>
+      <input type="email" name="email" required placeholder="Your email address" size="50">
+      <br>
+      <br>
+      <textarea id="message" name="message" required rows="10" cols="50" placeholder="Your message"></textarea>
+      <!-- <input type="text" name="message" required placeholder="Your message"> -->
+      <br>
+      <button type="submit">Send</button>
+    </form>
+  </div>
   <br>
 
   <div class="socials">
-  <h3>Social Media:</h3>
-  <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
-  <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
-  <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
-  <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
-  <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
+    <h3>Social Media:</h3>
+    <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
+    <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
+    <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
+    <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
+    <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
   </div>
 
   <script>
