--- a/index.html
+++ b/index.html
@@ -5,33 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marshall's Website</title>
-  <h1>Marshall's Website</h1>
-  <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
+  <h1>Marshall's Website <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt"></h1>
 </head>
 <body>
   <div class="aboutMe">
     <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
     <h3>About Me:</h3>
-    <p>Hi, I am Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with the link or form below.</p>
-    <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a>
+    <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
+    <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p>
+    <!-- <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a> -->
   </div>
-  <br>
+  <!-- <br> -->
 
-  <div class="email">
     <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST">
       <input type="hidden" name="_template" value="box">
-      <input type="text" name="name" required placeholder="Your name" size="50">
+      <input type="text" name="Name" required placeholder="Your name" size="50">
       <br>
       <br>
-      <input type="email" name="email" required placeholder="Your email address" size="50">
+      <input type="email" name="Email" required placeholder="Your email address" size="50">
       <br>
       <br>
-      <textarea id="message" name="message" required rows="10" cols="50" placeholder="Your message"></textarea>
-      <!-- <input type="text" name="message" required placeholder="Your message"> -->
+      <textarea id="message" name="Message" required rows="10" cols="50" placeholder="Your message"></textarea>
       <br>
-      <button type="submit">Send</button>
+      <button type="submit" class="submit">Send</button>
     </form>
-  </div>
   <br>
 
   <div class="socials">
