--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marshall's Website</title>
-  <h1>Marshall's Website <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt"></h1>
+  <h1>Marshall's Website</h1>
+  
 </head>
 <body>
+  <div class="lightModeButt">
+    <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
+  </div>
   <div class="aboutMe">
     <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
-    <h3>About Me:</h3>
+    <!-- <h3>About Me:</h3> -->
     <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
-    <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p>
+    <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p> -->
+
+    <p>Hi, my name is Marshall Toro, I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p>
     <!-- <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a> -->
   </div>
   <!-- <br> -->
