--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
   </div>
   <div class="aboutMe">
-    <img src="marshall.jpeg" height="500" alt="Photo me and my dog, Stan." class="center">
+    <img src="marshall.jpeg" height="500" alt="Photo of me and my dog, Stan." class="center">
     <!-- <h3>About Me:</h3> -->
     <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
     <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p> -->
