--- a/index.html
+++ b/index.html
@@ -9,52 +9,54 @@
   
 </head>
 <body>
-  <div class="lightModeButt">
-    <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
+  <div class="container">
+    <div class="lightModeButt">
+      <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
+    </div>
+    <div class="aboutMe">
+      <img src="marshall.jpeg" height="500" alt="Photo of me and my dog, Stan." class="center">
+      <!-- <h3>About Me:</h3> -->
+      <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
+      <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p> -->
+
+      <p>Hi, my name is Marshall Toro, I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p>
+      <!-- <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a> -->
+    </div>
+    <!-- <br> -->
+
+      <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST">
+        <input type="hidden" name="_template" value="box">
+        <input type="text" name="Name" required placeholder="Your name" size="50">
+        <br>
+        <br>
+        <input type="email" name="Email" required placeholder="Your email address" size="50">
+        <br>
+        <br>
+        <textarea id="message" name="Message" required rows="10" cols="50" placeholder="Your message"></textarea>
+        <br>
+        <button type="submit" class="submit">Send</button>
+      </form>
+    <br>
+
+    <div class="socials">
+      <h3>Social Media:</h3>
+      <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
+      <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
+      <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
+      <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
+      <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
+    </div>
+
+    <script>
+      function toggleLight() {
+        var element = document.body;
+        element.classList.toggle('lightMode');
+        var elem = document.getElementById("lightButt");
+
+        if (elem.value == "Light Mode") elem.value = "Dark Mode";
+        else elem.value = "Light Mode"
+      }
+    </script>
   </div>
-  <div class="aboutMe">
-    <img src="marshall.jpeg" height="500" alt="Photo of me and my dog, Stan." class="center">
-    <!-- <h3>About Me:</h3> -->
-    <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
-    <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p> -->
-
-    <p>Hi, my name is Marshall Toro, I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p>
-    <!-- <a href="mailto:marshallstoro@gmail.com" target="_blank">Email: marshallstoro@gmail.com</a> -->
-  </div>
-  <!-- <br> -->
-
-    <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST">
-      <input type="hidden" name="_template" value="box">
-      <input type="text" name="Name" required placeholder="Your name" size="50">
-      <br>
-      <br>
-      <input type="email" name="Email" required placeholder="Your email address" size="50">
-      <br>
-      <br>
-      <textarea id="message" name="Message" required rows="10" cols="50" placeholder="Your message"></textarea>
-      <br>
-      <button type="submit" class="submit">Send</button>
-    </form>
-  <br>
-
-  <div class="socials">
-    <h3>Social Media:</h3>
-    <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
-    <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
-    <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
-    <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
-    <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
-  </div>
-
-  <script>
-    function toggleLight() {
-      var element = document.body;
-      element.classList.toggle('lightMode');
-      var elem = document.getElementById("lightButt");
-
-      if (elem.value == "Light Mode") elem.value = "Dark Mode";
-      else elem.value = "Light Mode"
-    }
-  </script>
 </body>
 </html>
