--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input onclick="toggleLight()" type="button" value="Light Mode" id="lightButt">
     </div>
     <div class="aboutMe">
-      <img src="marshall.jpeg" height="500" alt="Photo of me and my dog, Stan." class="center">
+      <img src="marshall.jpeg" alt="Photo of me and my dog, Stan." class="center">
       <!-- <h3>About Me:</h3> -->
       <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions for me, feel free to email me with either the link or form below.</p> -->
       <!-- <p>Hi, my name is Marshall Toro. I am currently enrolled as a computer science major at California State University Channel Islands. I made this website to display my work and contact information. If you have any questions you can email me through the form below.</p> -->
@@ -24,7 +24,7 @@
     </div>
     <!-- <br> -->
 
-      <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST">
+      <form action="https://formsubmit.co/marshallstoro@gmail.com" method="POST" autocomplete="on">
         <input type="hidden" name="_template" value="box">
         <input type="text" name="Name" required placeholder="Your name" size="50">
         <br>
@@ -32,7 +32,7 @@
         <input type="email" name="Email" required placeholder="Your email address" size="50">
         <br>
         <br>
-        <textarea id="message" name="Message" required rows="10" cols="50" placeholder="Your message"></textarea>
+        <textarea id="message" name="Message" required rows="10" cols="40" placeholder="Your message"></textarea>
         <br>
         <button type="submit" class="submit">Send</button>
       </form>
