made small tweaks. want to add an interests tab

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
           <!-- Social media links -->
           <div class="socials">
-            <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a>
-            <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a>
-            <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a>
+            <!-- <a href="https://youtube.com/@marsh03?sub_confirmation=1" target="_blank"><img src="YTLogo.png" height="35" alt="YouTube"></a> -->
+            <!-- <a href="https://www.twitch.tv/marsh_live" target="_blank"><img src="twitchLogo.png" height="35" alt="Twitch"></a> -->
             <a href="https://github.com/Maaarsh" target="_blank"><img src="githubLogo.png" height="35" alt="Github"></a>
-            <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
             <a href="https://www.linkedin.com/in/marshall-toro-b60776324/?trk=opento_sprofile_topcard" target="_blank"><img src="linkedinLogo.png" height="35" alt="LinkedIn"></a>
+            <a href="https://open.spotify.com/user/marshallstoro?si=9oKFjx2VSjWcyU9q7xPTGw" target="_blank"><img src="spotifyLogo.png" height="35" alt="Spotify"></a>
+            <!-- <a href="https://x.com/marshtweets?s=21&t=t_MiwBoQFi26wfnnsN6m8w" target="_blank"><img src="twitterLogo.png" height="35" alt="Twitter"></a> -->
           </div>
         </div>
 
@@ -44,11 +44,19 @@
           <!-- Skills tab -->
           <div class="tabContents activeTab" id="skills">
             <ul>
-              <li><span>Problem Solving</span></li>
-              <br>
               <li><span>Web Development</span></li>
               <br>
+              <li><span>Python</span></li>
+              <br>
+              <li><span>Java</span></li>
+              <br>
+              <li><span>C++</span></li>
+              <br>
               <li><span>Unity</span></li>
+              <br>
+              <li><span>Problem Solving</span></li>
+              <br>
+              <li><span>Teamwork</span></li>
             </ul>
           </div>
 
