--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marshall's Website</title>
   <h1>Marshall's Website</h1>
+  <input type="button" href="game.html" value="game" class="gameButt" onclick="window.location.href='game.html'">
+  <!-- <link href="game/index.html"> Game </link> -->
 </head>
 <body>
 
