changed left and right attack to j and l keys instead of arrow keys

--- a/game.html
+++ b/game.html
@@ -32,9 +32,9 @@ Github Username: Maaarsh
   S: Fast Fall<br>
   D: Move Right<br>
   Shift: Crouch<br>
-  Left Arrow: Left Attack<br>
-  Right Arrow: Right Attack<br>
-  Space: Block<br>
+  J: Left Attack<br>
+  L: Right Attack<br>
+  Space: Block (Temporarily disabled due to bug)<br>
   P: Restart Game
   </p>
 </body>
